--- a/LdrpLoadWow64/LdrpLoadWow64.vcxproj
+++ b/LdrpLoadWow64/LdrpLoadWow64.vcxproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -123,6 +124,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <MASM Include="CustomGetModuleHandle.masm">
+      <FileType>Document</FileType>
+    </MASM>
     <ClCompile Include="lab.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
@@ -131,5 +135,6 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
   </ImportGroup>
 </Project>
