--- a/LdrpLoadWow64/LdrpLoadWow64.vcxproj.filters
+++ b/LdrpLoadWow64/LdrpLoadWow64.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="CustomGetModuleHandle.masm">
+      <Filter>Source Files</Filter>
+    </MASM>
+  </ItemGroup>
 </Project>
